--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.alex.spring.si</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.xfansfan.spring.si</groupId>
+	<artifactId>xf-integration</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
+	<name>xf-integration</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
